--- a/BatchSolver/Properties/launchSettings.json
+++ b/BatchSolver/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "BatchSolver": {
       "commandName": "Project",
-      "commandLineArgs": "C:\\Users\\Fabian\\Desktop\\Informatik\\CO\\Data\\SmallTest C:\\Users\\Fabian\\Desktop\\Informatik\\CO\\Experiments\\BatchesTest_Hybrid 1 vlns 180 2000 25 0 0 12000 8000 1000 100 100 1"
+      "commandLineArgs": "C:\\Users\\Fabian\\Desktop\\Informatik\\CO\\Data\\instances\\validation C:\\Users\\Fabian\\Desktop\\Informatik\\CO\\Experiments\\BatchesTest_Hybrid 1 vlns 5 2000 25 0 0 12000 8000 1000 100 100 1"
     }
   }
 }
